--- a/angular.json
+++ b/angular.json
@@ -48,7 +48,7 @@
                   "maximumError": "1MB"
                 }
               ],
-              "outputHashing": "all"
+              "outputHashing": "none"
             },
             "development": {
               "optimization": false,
