--- a/vercel.json
+++ b/vercel.json
@@ -2,14 +2,14 @@
   "version": 2,
   "builds": [
     {
-      "src": "dist/curriculum/browser/**",
+      "src": "dist/curriculum/**",
       "use": "@vercel/static"
     }
   ],
   "routes": [
     {
       "src": "/(.*)",
-      "dest": "/dist/curriculum/browser/$1"
+      "dest": "/dist/curriculum/$1"
     }
   ]
 }
